# rules_flatbuffers

./: .gitattributes  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: release.yml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod
flatbuffers/: BUILD.bazel  defs.bzl  extensions.bzl  flatc.sh  repositories.bzl  toolchain.bzl
flatbuffers/private/: BUILD.bazel  build_defs.bzl  resolved_toolchain.bzl  toolchains_repo.bzl  versions.bzl
flatbuffers/tests/: versions_test.bzl
