# Override http_archive for local testing
local_repository(
    name = "com_bookingcom_rules_flatbuffers",
    path = "../..",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "flatbuffers-java",
    url = "https://repo1.maven.org/maven2/com/google/flatbuffers/flatbuffers-java/24.3.25/flatbuffers-java-24.3.25.jar",
    # sha256 = "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_flatbuffers setup #
######################
# Fetches the rules_flatbuffers dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_bookingcom_rules_flatbuffers//flatbuffers:repositories.bzl", "flatbuffers_register_toolchains", "rules_flatbuffers_dependencies")

rules_flatbuffers_dependencies()

flatbuffers_register_toolchains(
    "flatbuffers",
    flatbuffers_version = "24.3.25",
)
