# Override http_archive for local testing
local_repository(
    name = "com_bookingcom_rules_flatbuffers",
    path = "../..",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "flatbuffers-java",
    sha256 = "f5b50034a53debda980aca803b8b06949f93a40163bc1db6cd69581d3718e355",
    url = "https://repo1.maven.org/maven2/com/google/flatbuffers/flatbuffers-java/24.3.25/flatbuffers-java-24.3.25.jar",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_flatbuffers setup #
######################
# Fetches the rules_flatbuffers dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_bookingcom_rules_flatbuffers//flatbuffers:repositories.bzl", "flatbuffers_register_toolchains", "rules_flatbuffers_dependencies")

rules_flatbuffers_dependencies()

flatbuffers_register_toolchains(
    "flatbuffers",
    flatbuffers_version = "24.3.25",
)
